--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-custom-color-6 u-header u-header" id="sec-a288"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-custom-color-6 u-header u-header" id="sec-a288"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1411" data-image-height="684">
           <img src="images/Top_Logo.svg" class="u-logo-image u-logo-image-1">
         </a>
