--- a/Hind-Token-(HDT).html
+++ b/Hind-Token-(HDT).html
@@ -27,7 +27,7 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Hind-Token-(HDT).html" data-home-page-title="Hind Token (HDT)" class="u-body u-custom-color-6"><header class="u-clearfix u-custom-color-6 u-header u-header" id="sec-a288"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-custom-color-6"><header class="u-clearfix u-custom-color-6 u-header u-header" id="sec-a288"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Hind-Token-(HDT).html" data-page-id="8676395" class="u-image u-logo u-image-1" data-image-width="521" data-image-height="250" title="Home">
           <img src="images/top_logo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -89,7 +89,17 @@
         <p class="u-small-text u-text u-text-variant u-text-1"> © 2021 Hind Token - HDT - All Rights Reserved<br>
         </p>
       </div></footer>
-    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
