--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,7 @@
     <meta name="description" content="The Future of Indian Cryptocurrency">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Hind Token (HDT)</title>
+<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/hindtoken/hindtoken.github.io/main/images/icon.png" sizes="32x32"/>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Hind-Token-(HDT).css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
