--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="home.html" data-home-page-title="home" class="u-body u-custom-color-6"><header class="u-clearfix u-custom-color-6 u-header u-header" id="sec-a288"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-custom-color-6"><header class="u-clearfix u-custom-color-6 u-header u-header" id="sec-a288"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="home.html" data-page-id="8676395" class="u-image u-logo u-image-1" data-image-width="521" data-image-height="250" title="Home">
           <img src="images/top_logo.png" class="u-logo-image u-logo-image-1">
         </a>
