--- a/about.html
+++ b/about.html
@@ -70,14 +70,24 @@
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-container-style u-image u-layout-cell u-size-30 u-image-1" data-image-width="600" data-image-height="400">
+              <div class="u-container-style u-image u-layout-cell u-size-22 u-image-1" data-image-width="600" data-image-height="400">
                 <div class="u-container-layout u-container-layout-1"></div>
               </div>
-              <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
+              <div class="u-container-style u-layout-cell u-size-38 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
-                  <h1 class="u-align-center u-text u-text-1">Contact Us</h1>
-                  <p class="u-align-left u-text u-text-2">Email: hindtoken@gmail<br>Twitter: https://twitter.com/HindToken<br>Telegram ID: @HDT_Admin<br>Telegram Channel: https://t.me/HindToken<br>
-                  </p>
+                  <div class="u-container-style u-expanded-width u-group u-group-1">
+                    <div class="u-container-layout">
+                      <h1 class="u-align-center u-text u-text-default u-text-1">About <span style="font-weight: 700;">Hind Token (HDT)</span>
+                      </h1>
+                      <p class="u-align-justify u-text u-text-default u-text-2">
+                        <span style="font-weight: 700;">Hind Token (HDT)</span> is a leading digital asset on Binance Smart Chain in the form of pegged <span style="font-weight: 700;">BEP20</span> tokens. <span style="font-weight: 700;">Hind Token (HDT)</span> building a fully decentralized Indian marketplace that allows traders
+to Buy/Exchange tokens or coins and trade them in an environment where
+liquidity pools and quick trades are available.&nbsp;&nbsp;<br>
+                      </p>
+                      <a href="https://bscscan.com/token/0x62beda1fe0a24c403e902cacce3a788b3e4ebfea" class="u-border-2 u-border-custom-color-2 u-border-hover-custom-color-2 u-btn u-btn-round u-button-style u-hover-custom-color-2 u-none u-radius-50 u-btn-1" target="_blank"> SEE ON BSCSCAN</a>
+                      <p class="u-align-center u-text u-text-default u-text-3"> Contract address : ​0x62beda1fe0a24c403e902cacce3a788b3e4ebfea</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -91,7 +101,7 @@
         <p class="u-small-text u-text u-text-variant u-text-1"> © 2021 Hind Token - HDT - All Rights Reserved<br>
         </p>
       </div></footer>
-  <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
+   <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
