--- a/exchange.html
+++ b/exchange.html
@@ -115,25 +115,12 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
               <col width="25%">
               <col width="25%">
             </colgroup>
-            <tbody class="u-align-center u-table-body">
-              <tr style="height: 29px;">
-                <td class="u-border-5 u-border-custom-color-6 u-table-cell u-white u-table-cell-1">HDT/INR</td>
-                <td class="u-border-5 u-border-custom-color-6 u-custom-color-9 u-table-cell u-table-cell-2">Buy : 1 INR/HDT</td>
-                <td class="u-border-5 u-border-custom-color-6 u-custom-color-10 u-table-cell u-table-cell-3">Sell : 0.97 INR</td>
-                <td class="u-border-5 u-border-custom-color-6 u-table-cell u-white u-table-cell-4">Minimum Buy/Sell OTY: 1000 INR</td>
-              </tr>
-              <tr style="height: 62px;">
-                <td class="u-border-5 u-border-custom-color-6 u-table-cell u-white u-table-cell-5">BNB/HDT</td>
-                <td class="u-border-5 u-border-custom-color-6 u-custom-color-9 u-table-cell u-table-cell-6">Buy :&nbsp;<b>35665 HDT/BNB</b>
-                </td>
-                <td class="u-border-5 u-border-custom-color-6 u-custom-color-10 u-table-cell u-table-cell-7">Sell : 34457 HDT/BNB</td>
-                <td class="u-border-5 u-border-custom-color-6 u-table-cell u-white u-table-cell-8">Minimum Buy/Sell OTY: 1000 HDT</td>
-              </tr>
-              <tr style="height: 63px;">
-                <td class="u-border-5 u-border-custom-color-6 u-table-cell u-white u-table-cell-9">WRX/HDT</td>
-                <td class="u-border-5 u-border-custom-color-6 u-custom-color-9 u-table-cell u-table-cell-10">Buy : 97 HDT/WRX</td>
-                <td class="u-border-5 u-border-custom-color-6 u-custom-color-10 u-table-cell u-table-cell-11">Sell : 95 HDT/WRX</td>
-                <td class="u-border-5 u-border-custom-color-6 u-table-cell u-white u-table-cell-12">Minimum Buy/Sell OTY: 1000 HDT</td>
+            <tbody class="u-table-body">
+              <tr style="height: 28px;">
+                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">HDT/INR</td>
+                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Buy : 1 INR/HDT</td>
+                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Sell : 0.97 INR</td>
+                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Minimum Buy/Sell OTY: 1000 INR</td>
               </tr>
             </tbody>
           </table>
@@ -146,7 +133,7 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
         <p class="u-small-text u-text u-text-variant u-text-1"> © 2021 Hind Token - HDT - All Rights Reserved<br>
         </p>
       </div></footer>
-   <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
+    <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
