--- a/exchange.html
+++ b/exchange.html
@@ -102,7 +102,7 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-custom-color-12 u-section-2" id="carousel_2090">
+    <section class="u-align-center u-black u-clearfix u-section-2" id="carousel_2090">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-custom-color-2 u-text-1">P2P Exchange Rate</h2>
         <p class="u-align-center u-text u-text-2">To exchange please contact on&nbsp; <a href="https://t.me/HDT_Admin" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">T.ME/HDT_ADMIN</a> or <a href="https://docs.google.com/forms/d/e/1FAIpQLScg2x2efAfjkfAl2QsIFzEBLqwtihrvwSvA337YM5KhMtIplg/viewform?usp=sf_link" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">Customer Support</a>
@@ -136,7 +136,8 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
             <tbody class="u-table-body">
               <tr style="height: 28px;">
                 <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">BNB/HDT</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-6"> Buy :&nbsp;<b>
+                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-6">
+                  <span style="font-weight: 400;"> Buy :</span>&nbsp;<b>
                     <span style="font-weight: 400;">35665 HDT/BNB</span></b>
                 </td>
                 <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Sell : 34457 HDT/BNB</td>
@@ -156,7 +157,8 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
             <tbody class="u-table-body">
               <tr style="height: 28px;">
                 <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">WRX/HDT</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-10"> Buy : 97<b>
+                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-10">
+                  <span style="font-weight: 400;">Buy : 97</span><b>
                     <span style="font-weight: 400;">&nbsp;HDT/WRX</span></b>
                 </td>
                 <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Sell : 95 HDT/WRX</td>
@@ -173,7 +175,7 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
         <p class="u-small-text u-text u-text-variant u-text-1"> © 2021 Hind Token - HDT - All Rights Reserved<br>
         </p>
       </div></footer>
- <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
+  <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
