--- a/exchange.html
+++ b/exchange.html
@@ -105,67 +105,13 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
     <section class="u-align-center u-black u-clearfix u-section-2" id="carousel_2090">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-custom-color-2 u-text-1">P2P Exchange Rate</h2>
-        <p class="u-align-center u-text u-text-2">To exchange please contact on&nbsp; <a href="https://t.me/HDT_Admin" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">T.ME/HDT_ADMIN</a> or <a href="https://docs.google.com/forms/d/e/1FAIpQLScg2x2efAfjkfAl2QsIFzEBLqwtihrvwSvA337YM5KhMtIplg/viewform?usp=sf_link" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">Customer Support</a>
+        <p class="u-align-center u-text u-text-2">To exchange please contact on hindtoken@gmail.com,&nbsp;&nbsp;<a href="https://t.me/HDT_Admin" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">T.ME/HDT_ADMIN</a> or <a href="https://docs.google.com/forms/d/e/1FAIpQLScg2x2efAfjkfAl2QsIFzEBLqwtihrvwSvA337YM5KhMtIplg/viewform?usp=sf_link" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">Customer Support</a>
         </p>
-        <div class="u-align-center u-table u-table-responsive u-table-1">
-          <table class="u-table-entity">
-            <colgroup>
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-            </colgroup>
-            <tbody class="u-table-body">
-              <tr style="height: 28px;">
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">HDT/INR</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Buy : 1 INR/HDT</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Sell : 0.97 INR/HDT</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Minimum Buy/Sell OTY: 1000 INR</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="u-align-center u-table u-table-responsive u-table-2">
-          <table class="u-table-entity">
-            <colgroup>
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-            </colgroup>
-            <tbody class="u-table-body">
-              <tr style="height: 28px;">
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">BNB/HDT</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-6">
-                  <span style="font-weight: 400;"> Buy :</span>&nbsp;<b>
-                    <span style="font-weight: 400;">35665 HDT/BNB</span></b>
-                </td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Sell : 34457 HDT/BNB</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Minimum Buy/Sell OTY: 1000 HDT</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="u-align-center u-table u-table-responsive u-table-3">
-          <table class="u-table-entity">
-            <colgroup>
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-              <col width="25%">
-            </colgroup>
-            <tbody class="u-table-body">
-              <tr style="height: 28px;">
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">WRX/HDT</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell u-table-cell-10">
-                  <span style="font-weight: 400;">Buy : 97</span><b>
-                    <span style="font-weight: 400;">&nbsp;HDT/WRX</span></b>
-                </td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Sell : 95 HDT/WRX</td>
-                <td class="u-align-center u-border-1 u-border-grey-dark-1 u-table-cell">Minimum Buy/Sell OTY: 1000 HDT</td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="u-clearfix u-custom-html u-expanded-width u-custom-html-1">
+          <style></style>
+          <p>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMOQFDGcyJ-yHib_KhkbF51k3heFh-jE-epP9S_DBW96NVeEs2Acm3phsvXYREWpUL0exPlfY5jUbd/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="885" height="400"></iframe>
+          </p>
         </div>
       </div>
     </section>
@@ -175,7 +121,9 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
         <p class="u-small-text u-text u-text-variant u-text-1"> © 2021 Hind Token - HDT - All Rights Reserved<br>
         </p>
       </div></footer>
-  <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-design" target="_blank">
+      <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
