--- a/exchange.html
+++ b/exchange.html
@@ -110,7 +110,7 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
         <div class="u-clearfix u-custom-html u-expanded-width u-custom-html-1">
           <style></style>
           <p>
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMOQFDGcyJ-yHib_KhkbF51k3heFh-jE-epP9S_DBW96NVeEs2Acm3phsvXYREWpUL0exPlfY5jUbd/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="885" height="400"></iframe>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMOQFDGcyJ-yHib_KhkbF51k3heFh-jE-epP9S_DBW96NVeEs2Acm3phsvXYREWpUL0exPlfY5jUbd/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="885" height="400" scrolling="no" frameborder="0"></iframe>
           </p>
         </div>
       </div>
@@ -121,8 +121,7 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
         <p class="u-small-text u-text u-text-variant u-text-1"> © 2021 Hind Token - HDT - All Rights Reserved<br>
         </p>
       </div></footer>
-
-      <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
+   <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
