--- a/exchange.html
+++ b/exchange.html
@@ -110,7 +110,7 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
         <div class="u-clearfix u-custom-html u-expanded-width u-custom-html-1">
           <style></style>
           <p>
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMOQFDGcyJ-yHib_KhkbF51k3heFh-jE-epP9S_DBW96NVeEs2Acm3phsvXYREWpUL0exPlfY5jUbd/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="885" height="400" scrolling="no" frameborder="0"></iframe>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMOQFDGcyJ-yHib_KhkbF51k3heFh-jE-epP9S_DBW96NVeEs2Acm3phsvXYREWpUL0exPlfY5jUbd/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="885" height="400" seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
           </p>
         </div>
       </div>
