--- a/exchange.html
+++ b/exchange.html
@@ -30,7 +30,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-custom-color-6"><header class=" u-clearfix u-header u-section-row-container" id="sec-a288"><div class="u-section-rows">
-        <div class="u-clearfix u-custom-color-6 u-section-row u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-3164">
+        <div class="u-clearfix u-custom-color-6 u-section-row u-sticky u-sticky-046a u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-3164">
           <div class="u-clearfix u-sheet u-sheet-1">
             <a href="home.html" data-page-id="8676395" class="u-image u-logo u-image-1" data-image-width="521" data-image-height="250" title="Home">
               <img src="images/top_logo.png" class="u-logo-image u-logo-image-1">
@@ -121,7 +121,7 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
         <p class="u-small-text u-text u-text-variant u-text-1"> © 2021 Hind Token - HDT - All Rights Reserved<br>
         </p>
       </div></footer>
-   <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
+  <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
