--- a/exchange.html
+++ b/exchange.html
@@ -102,7 +102,7 @@ coins against <span style="font-weight: 700;">Hind Token (HDT)</span> from anoth
         </div>
       </div>
     </section>
-    <section class="u-align-center u-black u-clearfix u-section-2" id="carousel_2090">
+    <section class="u-align-center u-clearfix u-white u-section-2" id="carousel_2090">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-custom-color-2 u-text-1">P2P Exchange Rate</h2>
         <p class="u-align-center u-text u-text-2">To exchange please contact on hindtoken@gmail.com,&nbsp;&nbsp;<a href="https://t.me/HDT_Admin" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank">T.ME/HDT_ADMIN</a> or <a href="https://docs.google.com/forms/d/e/1FAIpQLScg2x2efAfjkfAl2QsIFzEBLqwtihrvwSvA337YM5KhMtIplg/viewform?usp=sf_link" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">Customer Support</a>
