--- a/get_rich.html
+++ b/get_rich.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Token info, Hind Token (HDT), Token sale status, Active
             Finished
             Ask token sale admin to approve token sale contract or check tokens balance on the wallet!, Buy tokens, Token sale information, Sale contract, Referral program">
-    <title>get_rich</title>
+       <title>Hind Token (HDT)</title>
 <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/hindtoken/hindtoken.github.io/main/images/icon.png" sizes="32x32"/>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="get_rich.css" media="screen">
