--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="INTUITIVE">
     <meta name="description" content="The Future of Indian Cryptocurrency">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Hind Token (HDT)</title>
+  <title>Hind Token (HDT)</title>
 <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/hindtoken/hindtoken.github.io/main/images/icon.png" sizes="32x32"/>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="home.css" media="screen">
@@ -47,7 +47,7 @@
                 <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="home.html" style="padding: 22px 20px;">home</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="about.html" style="padding: 22px 20px;">about</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="get_rich.html" style="padding: 22px 20px;">Get Rich Fast</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="hdt_nft.html" style="padding: 22px 20px;">NFTs</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="https://opensea.io/collection/hindtoken" target="_blank" style="padding: 22px 20px;">NFTs</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="contact_us.html" style="padding: 22px 20px;">Contact Us</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="https://docs.google.com/forms/d/e/1FAIpQLScg2x2efAfjkfAl2QsIFzEBLqwtihrvwSvA337YM5KhMtIplg/viewform?usp=sf_link" target="_blank" style="padding: 22px 20px;">Customer Support</a>
 </li></ul>
@@ -59,7 +59,7 @@
                     <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="home.html" style="padding: 22px 20px;">home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="about.html" style="padding: 22px 20px;">about</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="get_rich.html" style="padding: 22px 20px;">Get Rich Fast</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="hdt_nft.html" style="padding: 22px 20px;">NFTs</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://opensea.io/collection/hindtoken" target="_blank" style="padding: 22px 20px;">NFTs</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="contact_us.html" style="padding: 22px 20px;">Contact Us</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLScg2x2efAfjkfAl2QsIFzEBLqwtihrvwSvA337YM5KhMtIplg/viewform?usp=sf_link" target="_blank" style="padding: 22px 20px;">Customer Support</a>
 </li></ul>
@@ -101,7 +101,7 @@
         <p class="u-small-text u-text u-text-variant u-text-1"> © 2021 Hind Token - HDT - All Rights Reserved<br>
         </p>
       </div></footer>
- <span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
+<span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
