--- a/get_rich.html
+++ b/get_rich.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Token info, Hind Token (HDT), Token sale status, Active
             Finished
             Ask token sale admin to approve token sale contract or check tokens balance on the wallet!, Buy tokens, Token sale information, Sale contract, Referral program">
-    <title>Hind Token (HDT)</title>
+   <title>Hind Token (HDT)</title>
 <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/hindtoken/hindtoken.github.io/main/images/icon.png" sizes="32x32"/>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="get_rich.css" media="screen">
@@ -48,7 +48,7 @@
                 <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="home.html" style="padding: 22px 20px;">home</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="about.html" style="padding: 22px 20px;">about</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="get_rich.html" style="padding: 22px 20px;">Get Rich Fast</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="hdt_nft.html" style="padding: 22px 20px;">NFTs</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="https://opensea.io/collection/hindtoken" target="_blank" style="padding: 22px 20px;">NFTs</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="contact_us.html" style="padding: 22px 20px;">Contact Us</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-2 u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-hover-custom-color-2 u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="https://docs.google.com/forms/d/e/1FAIpQLScg2x2efAfjkfAl2QsIFzEBLqwtihrvwSvA337YM5KhMtIplg/viewform?usp=sf_link" target="_blank" style="padding: 22px 20px;">Customer Support</a>
 </li></ul>
@@ -60,7 +60,7 @@
                     <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="home.html" style="padding: 22px 20px;">home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="about.html" style="padding: 22px 20px;">about</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="get_rich.html" style="padding: 22px 20px;">Get Rich Fast</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="hdt_nft.html" style="padding: 22px 20px;">NFTs</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://opensea.io/collection/hindtoken" target="_blank" style="padding: 22px 20px;">NFTs</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="contact_us.html" style="padding: 22px 20px;">Contact Us</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLScg2x2efAfjkfAl2QsIFzEBLqwtihrvwSvA337YM5KhMtIplg/viewform?usp=sf_link" target="_blank" style="padding: 22px 20px;">Customer Support</a>
 </li></ul>
